hphp/hack/test/pocket_universes/typing/reify1.bad.php.exp
File "reify1.bad.php", line 10, characters 16-16:
Invalid reified hint (Typing[4305])
File "reify1.bad.php", line 10, characters 16-16:
This is not reified, it cannot be used as a reified type argument
File "reify1.bad.php", line 3, characters 19-19:
T is reified
